--- a/assets/sass/styles.sass
+++ b/assets/sass/styles.sass
@@ -66,8 +66,9 @@ article
     height: 100%
     width: 100%
     display: block
-    background-size: 100% auto
+    background-size: auto 400px
     background-position: center center
+    border-bottom: none !important
 
 
 a, p a
@@ -118,12 +119,12 @@ h2
 
 
 h3
-  font-size: 1.9em
+  font-size: 1.6em
 
 
 
 h4
-  font-size: 1.7em
+  font-size: 1.5em
 
 
 
@@ -180,7 +181,7 @@ h5, h6
 
 .post-content
 
-  h2, h3
+  h2
     border-top: 1px solid $borderColor
     padding-top: modular-scale(1)
 
